# backend-cpu-cleartext

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml  klocwork.yml  setup-code-for-kw_cleartext-backend.sh
benchmarks/Matrix/MatMult/include/: bench_matmult.h
benchmarks/Matrix/MatMult/include/inl/: bench_matmult.inl
benchmarks/Matrix/MatMult/latency/include/: bench_matmul_l.h
benchmarks/Matrix/MatMult/offline/include/: bench_matmul_o.h
benchmarks/Matrix/include/: mat_data_container.h
benchmarks/Matrix/include/inl/: mat_data_container.inl
benchmarks/Vector/DotProduct/include/: bench_dotprod.h
benchmarks/Vector/DotProduct/include/inl/: bench_dotprod.inl
benchmarks/Vector/DotProduct/latency/include/: bench_dotprod_l.h
benchmarks/Vector/DotProduct/offline/include/: bench_dotprod_o.h
benchmarks/Vector/EltwiseAdd/include/: bench_eltadd.h
benchmarks/Vector/EltwiseAdd/include/inl/: bench_eltadd.inl
benchmarks/Vector/EltwiseAdd/latency/include/: bench_eltadd_l.h
benchmarks/Vector/EltwiseAdd/offline/include/: bench_eltadd_o.h
benchmarks/Vector/EltwiseMult/include/: bench_eltmult.h
benchmarks/Vector/EltwiseMult/include/inl/: bench_eltmult.inl
benchmarks/Vector/EltwiseMult/latency/include/: bench_eltmult_l.h
benchmarks/Vector/EltwiseMult/offline/include/: bench_eltmult_o.h
benchmarks/Vector/LogisticRegression/include/: bench_logreg.h
benchmarks/Vector/LogisticRegression/include/inl/: bench_logreg.inl
benchmarks/Vector/LogisticRegression/latency/include/: bench_logreg_l.h
benchmarks/Vector/LogisticRegression/offline/include/: bench_logreg_o.h
benchmarks/Vector/SimpleSetIntersection/include/: bench_simplesetint.h
benchmarks/Vector/SimpleSetIntersection/include/inl/: bench_simplesetint.inl
benchmarks/Vector/SimpleSetIntersection/latency/include/: bench_simplesetint_l.h
benchmarks/Vector/SimpleSetIntersection/offline/include/: bench_simplesetint_o.h
benchmarks/Vector/include/: vec_data_container.h
benchmarks/Vector/include/inl/: vec_data_container.inl
cmake/utils/: import-library.cmake
include/: clear_benchmark.h  clear_engine.h  clear_error.h  clear_version.h.in  data_container.h
include/inl/: data_container.inl
src/: clear_benchmark.cpp  clear_engine.cpp
